kubernetes_manifiest_files/1 Pod-Deployment-Service-Ingress/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask
spec:
  containers:
  - name: flask
    image: krishnabelamkonda/test-repo:k8s_github
    ports:
    - containerPort: 5000
