kubernetes_manifiest_files/1 Pod-Deployment-Service-Ingress/service_load_balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-lb-service
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
    - port: 80
      # targetPort is nothing but application port
      targetPort: 5000
      # Optional field
      nodePort: 30006
