kubernetes_manifiest_files/1 Pod-Deployment-Service-Ingress/service_node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-np-service
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - port: 80
      # targetPort is nothing but application port
      targetPort: 5000
      # Optional field
      nodePort: 30005
