kubernetes_manifiest_files/1 Pod-Deployment-Service-Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  rules:
  - host: logitha.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-app-service 
            port:
              number: 5000
      - pathType: Prefix
        path: "/stats"
        backend:
          service:
            name: flask-app-service
            port:
              number: 5000
